// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditorRating/> renders correctly for rating: 1 1`] = `
<strong
  className="text-danger"
>
  Worse
</strong>
`;

exports[`<AuditorRating/> renders correctly for rating: 2 1`] = `
<strong
  className="text-warning"
>
  Average
</strong>
`;

exports[`<AuditorRating/> renders correctly for rating: 3 1`] = `
<strong
  className="text-info"
>
  Good
</strong>
`;

exports[`<AuditorRating/> renders correctly for rating: 4 1`] = `
<strong
  className="text-success"
>
  Excellent
</strong>
`;

exports[`<AuditorRating/> renders correctly for rating: null 1`] = `
<span>
  not rated
</span>
`;
